// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardAppVue > should render properly props else case 1`] = `
"<base-card-default>
  <div class=\\"h-52 sm:h-full lg:w-1/3 w-full\\">
    <!--v-if-->
  </div>
  <div class=\\"flex flex-col lg:w-2/3 w-full flex-1 gap-5 sm:p-2\\">
    <div class=\\"flex flex-1 flex-col gap-3\\">
      <div class=\\"w-full max-h-14 overflow-ellipsis\\">
        <h2>title</h2>
      </div>
      <div class=\\"w-full min-h-3 max-h-20 line-clamp-3\\">overview</div>
    </div>
    <div class=\\"mt-auto flex gap-3\\">
      <div class=\\"w-24 h-8\\">TBA</div>
      <div class=\\"w-10 h-8 text-2xl dark:text-white text-black\\">
        <nuxticon name=\\"times\\"></nuxticon>
      </div>
      <div class=\\"w-14 h-8 ml-auto\\">
        <base-switch-toggle id=\\"id-sw\\" default-state=\\"false\\"></base-switch-toggle>
      </div>
    </div>
  </div>
</base-card-default>"
`;

exports[`CardAppVue > should render properly props if case 1`] = `
"<base-card-default>
  <div class=\\"h-52 sm:h-full lg:w-1/3 w-full\\"><img class=\\"max-h-full mx-auto\\" src=\\"data:image/gif;base64,R0lGODdhAQABAPAAAP8AAAAAACwAAAAAAQABAAACAkQBADs=\\" alt=\\"title\\"></div>
  <div class=\\"flex flex-col lg:w-2/3 w-full flex-1 gap-5 sm:p-2\\">
    <div class=\\"flex flex-1 flex-col gap-3\\">
      <div class=\\"w-full max-h-14 overflow-ellipsis\\">
        <h2>title</h2>
      </div>
      <div class=\\"w-full min-h-3 max-h-20 line-clamp-3\\">overview</div>
    </div>
    <div class=\\"mt-auto flex gap-3\\">
      <div class=\\"w-24 h-8\\">1/0/2022</div>
      <div class=\\"w-10 h-8 text-2xl dark:text-white text-black\\">
        <nuxticon name=\\"check\\"></nuxticon>
      </div>
      <div class=\\"w-14 h-8 ml-auto\\">
        <base-switch-toggle id=\\"id-sw\\" default-state=\\"true\\"></base-switch-toggle>
      </div>
    </div>
  </div>
</base-card-default>"
`;

exports[`CardAppVue should render properly props else case 1`] = `
"<base-card-default>
  <div class="h-52 sm:h-full lg:w-1/3 w-full">
    <!--v-if-->
  </div>
  <div class="flex flex-col lg:w-2/3 w-full flex-1 gap-5 sm:p-2">
    <div class="flex flex-1 flex-col gap-3">
      <div class="w-full max-h-14 overflow-ellipsis">
        <h2>title</h2>
      </div>
      <div class="w-full min-h-3 max-h-20 line-clamp-3">overview</div>
    </div>
    <div class="mt-auto flex gap-3">
      <div class="w-24 h-8">TBA</div>
      <div class="w-10 h-8 text-2xl dark:text-white text-black">
        <nuxticon name="times"></nuxticon>
      </div>
      <div class="w-14 h-8 ml-auto">
        <base-switch-toggle id="id-sw" default-state="false"></base-switch-toggle>
      </div>
    </div>
  </div>
</base-card-default>"
`;

exports[`CardAppVue should render properly props if case 1`] = `
"<base-card-default>
  <div class="h-52 sm:h-full lg:w-1/3 w-full"><img class="max-h-full mx-auto" src="data:image/gif;base64,R0lGODdhAQABAPAAAP8AAAAAACwAAAAAAQABAAACAkQBADs=" alt="title"></div>
  <div class="flex flex-col lg:w-2/3 w-full flex-1 gap-5 sm:p-2">
    <div class="flex flex-1 flex-col gap-3">
      <div class="w-full max-h-14 overflow-ellipsis">
        <h2>title</h2>
      </div>
      <div class="w-full min-h-3 max-h-20 line-clamp-3">overview</div>
    </div>
    <div class="mt-auto flex gap-3">
      <div class="w-24 h-8">1/0/2022</div>
      <div class="w-10 h-8 text-2xl dark:text-white text-black">
        <nuxticon name="check"></nuxticon>
      </div>
      <div class="w-14 h-8 ml-auto">
        <base-switch-toggle id="id-sw" default-state="true"></base-switch-toggle>
      </div>
    </div>
  </div>
</base-card-default>"
`;
